[package]
name = "pictograms"
description = "Glyph generator."
version = "0.1.0"
edition = "2021"

[package.metadata.bundle]
identifier = "io.github.nek.pictograms"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nannou = "0.18.1"
libm = "0.2.5"
pad = "0.1.6"
coreaudio-rs = "0.11.1"

[profile.dev]
debug = 2
opt-level = 1

[profile.release]
strip = true
opt-level = "z" # makes everything slower though
lto = true
panic = "abort"